--- a/index.html
+++ b/index.html
@@ -706,6 +706,10 @@
     </style>
 </head>
 <body>
+    <audio controls loop autoplay>
+  <source src="midia/ROMANTICA.ogg" type="audio/ogg">
+  Seu navegador não suporta o elemento de áudio.
+</audio>
     <!-- Overlay de loading -->
     <div class="loading-overlay">
         <div class="loading-heart">❤️</div>
@@ -1393,3 +1397,4 @@
 </body>
 
 </html>
+
