Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
     </style>
 </head>
 <body>
-    <audio controls loop autoplay>
+    <audio loop autoplay>
   <source src="midia/ROMANTICA.ogg" type="audio/ogg">
   Seu navegador não suporta o elemento de áudio.
 </audio>
@@ -1397,4 +1397,5 @@
 </body>
 
 </html>
+
 
