--- a/index.html
+++ b/index.html
@@ -706,8 +706,8 @@
     </style>
 </head>
 <body>
-    <audio loop autoplay>
-  <source src="midia/ROMANTICA.ogg" type="audio/ogg">
+    <audio controls loop autoplay>
+  <source src="midia/romantica.ogg" type="audio/ogg">
   Seu navegador não suporta o elemento de áudio.
 </audio>
     <!-- Overlay de loading -->
@@ -1397,5 +1397,6 @@
 </body>
 
 </html>
+
 
 
