Update print statement to show 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
     </style>
 </head>
 <body>
-    <audio controls loop autoplay>
+    <audio controls autoplay>
   <source src="midia/romantica.ogg" type="audio/ogg">
   Seu navegador não suporta o elemento de áudio.
 </audio>
@@ -1397,6 +1397,7 @@
 </body>
 
 </html>
+
 
 
 
